trying fixing mobile scrollbar shift

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -157,5 +157,5 @@ p {
 }
 
 .content-shift-fix {
-    // margin-right:17px;
+    margin-right:17px;
 }
